--- a/main.html
+++ b/main.html
@@ -9,7 +9,52 @@
 </head>
 <body>
     <!-- add table here -->
-
+	<table>
+		<thead class="back">
+			<tr>
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Naeem Akhter</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Mohammad Ali</td>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Farhan Akhter</td>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>3</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Imran Khan</td>
+				<td>10</td>
+				<td>23</td>
+				<td>15</td>
+				<td>8</td>
+				<td>20</td>
+			</tr>
+		</tbody>
+	</table>
         
 </body>
 </html>
